--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "did-jwt": "^5.6.3",
+    "did-jwt-vc": "^2.1.6",
     "expo": "~42.0.1",
+    "expo-clipboard": "~1.1.0",
+    "expo-random": "^11.2.0",
     "expo-status-bar": "~1.0.4",
+    "infra-did-js": "^0.4.5",
+    "node-libs-expo": "^0.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "text-encoding": "^0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
